# aurum-genre

./: .gitignore  LICENSE  README.md  mood_taxonomy.json  pyproject.toml  taxonomy.json
aurum_genre/: dataset.py  energy.py  eval.py  export.py  infer.py  licenses.py  mel.py  model.py  provenance.py  seed.py  taxonomy.py  train.py
docs/: REPRODUCIBILITY.md  TRAINING.md
docs/superpowers/plans/: 2026-07-02-reproducibility-provenance.md
docs/superpowers/specs/: 2026-07-02-reproducibility-provenance-design.md  2026-07-03-electronic-subgenres-design.md
notebooks/: train_genre_colab.ipynb
scripts/: build_combined_manifest.py  build_jamendo_manifest.py  build_manifest.py  build_mood_manifest.py  build_music_library.py  download_fma.sh  jamendo_genre_map.json  make_stub_fixture.py  package_release.py  reconstruct_manifest.py  run_pipeline.py  run_train.sh  train_genre_v1.sh  train_mood.py
tests/: test_build_combined_manifest.py  test_build_jamendo_manifest.py  test_build_manifest.py  test_build_mood_manifest.py  test_dataset.py  test_energy.py  test_eval.py  test_export.py  test_infer.py  test_licenses.py  test_mel.py  test_model.py  test_package.py  test_package_release.py  test_provenance.py  test_seed.py  test_smoke.py  test_taxonomy.py  test_train.py
tests/fixtures/: manifest_tiny.csv
