[project]
name = "aurum-genre"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.5,<2.7",
  "torchaudio>=2.5,<2.7",
  "soundfile>=0.12",
  "numpy>=1.26,<2.2",
  "pandas>=2.2",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "scikit-learn>=1.5",
]
[project.optional-dependencies]
dev = ["pytest>=8.2"]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["aurum_genre"]
[tool.pytest.ini_options]
testpaths = ["tests"]
